main page update

--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
     </div>
 
     <footer class="footer">
-      <div class="container">
-        <a href="api">API Table Link</a>
-
-        <a href="api">API Wait List</a>
-      </div>
-    </footer>
-
-    </div>
+      <footer class="footer">
+        <div class="container">
+          <p>
+            <a href="/api/tables">API Table Link</a> |
+            <a href="/api/waitlist">API Wait List</a>
+          </p>
+        </div>
+      </footer>
 
 </body>
-
 </html>
