--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <h1>Hot Restaurant</h1>
       <h3>Five Tables Only! Book Now!</h3>
       <hr>
-      <a href="/add">
+      <a href="/table">
         <button type="button" class="btn btn-primary btn-lg">
           <span class="glyphicon glyphicon-plus"></span>View Tables</button>
       </a>
-      <a href="/add">
+      <a href="/reservation">
         <button type="button" class="btn btn-danger btn-lg">
           <span class="glyphicon glyphicon-plus"></span>Make Reservation</button>
       </a>
