--- a/table.html
+++ b/table.html
@@ -16,7 +16,7 @@
             <hr>
             <h2>Current Reservations and Waiting List</h2>
             <br>
-            <a href="/add">
+            <a href="/reservation">
                 <button id="add-btn" type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-plus"></span>Make Reservation</button>
             </a>
             <a href="/"><span><button id="home-btn" type="button" class="btn btn-white btn-lg"><span class="glyphicon glyphicon-home"></span></button></span>
