--- a/index.html
+++ b/index.html
@@ -33,16 +33,20 @@
             <span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button>
         </a>
       </div>
+    </div>
 
-    </div <footer class="footer">
     <footer class="footer">
       <div class="container">
         <p>
-          <a href="/api/tables">API Table Link</a> |
-          <a href="/api/waitlist">API Wait List</a>
+          <!-- <h5> -->
+            <a href="/api/tables">API Table Link</a> |
+            <a href="/api/waitlist">API Wait List</a>
+          <!-- </h5> -->
         </p>
       </div>
     </footer>
+
+  </div>
 
 </body>
 
