--- a/reservation.html
+++ b/reservation.html
@@ -73,7 +73,7 @@
       event.preventDefault();
       var newReservation = {
         name: $("#name").val().trim(),
-        email: $("#email").val(),
+        email: $("#e-mail").val().trim(),
         phoneNumber: $("#phone-number").val().trim(),
         uniqueId: $("#unique-id").val().trim()
       };
