--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <footer class="footer">
-            <a href="/api/tables">API Table Link</a> |
+            <a href="/api/table">API Table Link</a> |
             <a href="/api/waitlist">API Wait List</a>
         </p>
       </div>
